# wGInfer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: chat_cli.py  chat_server.py  chat_web.html
include/: wginfer.h
python/: pyproject.toml  setup.cfg  setup.py
python/bindings/: bindings.hpp  pybind_module.cpp
python/bindings/common/: common.cpp  ops.cpp  runtime.cpp  tensor.cpp
python/bindings/core/: core.cpp  core.hpp  ops.cpp  runtime.cpp  tensor.cpp
python/bindings/models/: qwen2.cpp  qwen3_5.cpp
python/wginfer/: __init__.py  ops.py  runtime.py  tensor.py
python/wginfer/core/: __init__.py
python/wginfer/models/: __init__.py  _config.py  qwen2.py  qwen3_5.py  qwen3_5_reference.py  registry.py
qwen3_5_integration/: 01_model_structure.md  06_host_fallback_plan.md  07_cpp_backend_refactor_plan.md  README.md
src/: utils.hpp
src/core/: core.hpp  wginfer_core.hpp
src/core/allocator/: allocator.hpp  naive_allocator.cpp  naive_allocator.hpp
src/core/context/: context.cpp  context.hpp
src/core/runtime/: runtime.cpp  runtime.hpp
src/core/storage/: storage.cpp  storage.hpp
src/device/: device_resource.hpp  runtime_api.cpp  runtime_api.hpp
src/device/cpu/: cpu_resource.cpp  cpu_resource.hpp  cpu_runtime_api.cpp
src/device/metax/: metax_resource.hpp  metax_resource.maca  metax_runtime_api.maca
src/device/nvidia/: nvidia_resource.cu  nvidia_resource.cuh  nvidia_runtime_api.cu
src/models/qwen2/: model.cpp  model.hpp
src/models/qwen3_5/: model.cpp  model.hpp
src/ops/add/: op.cpp  op.hpp
src/ops/add/cpu/: add_cpu.cpp  add_cpu.hpp
src/ops/add/metax/: add_metax.hpp  add_metax.maca
src/ops/add/nvidia/: add_nvidia.cu  add_nvidia.cuh
src/ops/argmax/: op.cpp  op.hpp
src/ops/argmax/cpu/: argmax_cpu.cpp  argmax_cpu.hpp
src/ops/argmax/metax/: argmax_metax.hpp  argmax_metax.maca
src/ops/argmax/nvidia/: argmax_nvidia.cu  argmax_nvidia.cuh
src/ops/causal_conv1d/: op.cpp  op.hpp
src/ops/causal_conv1d/cpu/: causal_conv1d_cpu.cpp  causal_conv1d_cpu.hpp
src/ops/causal_conv1d/nvidia/: causal_conv1d_nvidia.cu  causal_conv1d_nvidia.cuh
src/ops/embedding/: op.cpp  op.hpp
src/ops/embedding/cpu/: embedding_cpu.cpp  embedding_cpu.hpp
src/ops/embedding/metax/: embedding_metax.hpp  embedding_metax.maca
src/ops/embedding/nvidia/: embedding_nvidia.cu  embedding_nvidia.cuh
src/ops/gated_rms_norm/: op.cpp  op.hpp
src/ops/gated_rms_norm/cpu/: gated_rms_norm_cpu.cpp  gated_rms_norm_cpu.hpp
src/ops/gated_rms_norm/nvidia/: gated_rms_norm_nvidia.cu  gated_rms_norm_nvidia.cuh
src/ops/linear/: op.cpp  op.hpp
src/ops/linear/cpu/: linear_cpu.cpp  linear_cpu.hpp
src/ops/linear/metax/: linear_metax.hpp  linear_metax.maca
src/ops/linear/nvidia/: linear_nvidia.cu  linear_nvidia.cuh
src/ops/linear_attention/: op.cpp  op.hpp
src/ops/linear_attention/cpu/: linear_attention_cpu.cpp  linear_attention_cpu.hpp
src/ops/linear_attention/nvidia/: linear_attention_nvidia.cu  linear_attention_nvidia.cuh
src/ops/linear_attn_gates/: op.cpp  op.hpp
src/ops/linear_attn_gates/cpu/: linear_attn_gates_cpu.cpp  linear_attn_gates_cpu.hpp
src/ops/linear_attn_gates/nvidia/: linear_attn_gates_nvidia.cu  linear_attn_gates_nvidia.cuh
src/ops/linear_attn_qkv/: op.cpp  op.hpp
src/ops/linear_attn_qkv/cpu/: linear_attn_qkv_cpu.cpp  linear_attn_qkv_cpu.hpp
src/ops/linear_attn_qkv/nvidia/: linear_attn_qkv_nvidia.cu  linear_attn_qkv_nvidia.cuh
src/ops/mul_sigmoid/: op.cpp  op.hpp
src/ops/mul_sigmoid/cpu/: mul_sigmoid_cpu.cpp  mul_sigmoid_cpu.hpp
src/ops/mul_sigmoid/nvidia/: mul_sigmoid_nvidia.cu  mul_sigmoid_nvidia.cuh
src/ops/normalize_l2/: op.cpp  op.hpp
src/ops/normalize_l2/cpu/: normalize_l2_cpu.cpp  normalize_l2_cpu.hpp
src/ops/normalize_l2/nvidia/: normalize_l2_nvidia.cu  normalize_l2_nvidia.cuh
src/ops/rearrange/: op.cpp  op.hpp
src/ops/rms_norm/: op.cpp  op.hpp
src/ops/rms_norm/cpu/: rms_norm_cpu.cpp  rms_norm_cpu.hpp
src/ops/rms_norm/metax/: rms_norm_metax.hpp  rms_norm_metax.maca
src/ops/rms_norm/nvidia/: rms_norm_nvidia.cu  rms_norm_nvidia.cuh
src/ops/rope/: op.cpp  op.hpp
src/ops/rope/cpu/: rope_cpu.cpp  rope_cpu.hpp
src/ops/rope/metax/: rope_metax.hpp  rope_metax.maca
src/ops/rope/nvidia/: rope_nvidia.cu  rope_nvidia.cuh
src/ops/rope_partial/: op.cpp  op.hpp
src/ops/rope_partial/cpu/: rope_partial_cpu.cpp  rope_partial_cpu.hpp
src/ops/rope_partial/nvidia/: rope_partial_nvidia.cu  rope_partial_nvidia.cuh
src/ops/self_attention/: op.cpp  op.hpp
src/ops/self_attention/cpu/: self_attention_cpu.cpp  self_attention_cpu.hpp
src/ops/self_attention/metax/: self_attention_metax.hpp  self_attention_metax.maca
src/ops/self_attention/nvidia/: self_attention_nvidia.cu  self_attention_nvidia.cuh
src/ops/swiglu/: op.cpp  op.hpp
src/ops/swiglu/cpu/: swiglu_cpu.cpp  swiglu_cpu.hpp
src/ops/swiglu/metax/: swiglu_metax.hpp  swiglu_metax.maca
src/ops/swiglu/nvidia/: swiglu_nvidia.cu  swiglu_nvidia.cuh
src/tensor/: tensor.cpp  tensor.hpp
src/utils/: check.hpp  gpu_utils.hpp  types.cpp  types.hpp
test/: benchmark_infer.py  test_infer.py  test_model_config.py  test_runtime.py  test_tensor.py  test_utils.py
test/ops/: add.py  argmax.py  causal_conv1d.py  embedding.py  gated_rms_norm.py  linear.py  linear_attention.py  rms_norm.py  rope.py  self_attention.py  swiglu.py
