[metadata]
name = wginfer
version = 0.1.0
description = Python APIs for wginfer
author = Pan Zezhong
license = MIT

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    torch>=2.4.0
    transformers
    accelerate

[options.package_data]
wginfer = 
    libwginfer/*.so
    libwginfer/*.dll
    libwginfer/*.dylib
